--- a/url-shortener-sb/src/main/resources/application.properties
+++ b/url-shortener-sb/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 jwt.expiration = 172800000
 jwt.secret = ${JWT_SECRET}
+
+logging.level.org.springframework.security = DEBUG
+logging.level.com.url.url_shortener_sb = DEBUG
