--- a/url-shortener-frontend/package.json
+++ b/url-shortener-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "url-shortener-react",
+  "name": "url-shortener-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
