--- a/url-shortener-frontend/package.json
+++ b/url-shortener-frontend/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.8",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.9.0",
     "framer-motion": "^12.15.0",
     "motion": "^12.15.0",
     "postcss": "^8.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.57.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "tailwindcss": "^4.1.8"
