--- a/url-shortener-frontend/package.json
+++ b/url-shortener-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.8",
     "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/react-query": "^5.80.5",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "framer-motion": "^12.15.0",
