--- a/url-shortener-frontend/package.json
+++ b/url-shortener-frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.1",
     "@tailwindcss/postcss": "^4.1.8",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.80.5",
@@ -24,7 +27,10 @@
     "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-is": "^19.1.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.6.1",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
