--- a/url-shortener-frontend/package.json
+++ b/url-shortener-frontend/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.80.5",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.15.0",
     "motion": "^12.15.0",
     "postcss": "^8.5.4",
