prepared for deployment

--- a/url-shortener-sb/src/main/resources/application.properties
+++ b/url-shortener-sb/src/main/resources/application.properties
@@ -1,15 +1,18 @@
 spring.application.name = url-shortener-sb
 
 spring.datasource.driver-class-name = org.postgresql.Driver
-spring.datasource.url = ${JDBC_DATABASE_URL}
-spring.datasource.username = ${JDBC_DATABASE_USERNAME}
-spring.datasource.password = ${JDBC_DATABASE_PASSWORD}
+spring.datasource.url = ${DATABASE_URL}
+spring.datasource.username = ${DATABASE_USERNAME}
+spring.datasource.password = ${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = ${DATABASE_DIALECT}
 
 jwt.expiration = 172800000
 jwt.secret = ${JWT_SECRET}
 
-logging.level.org.springframework.security = DEBUG
-logging.level.com.url.url_shortener_sb = DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.servlet=TRACE
+
+frontend.url=${FRONTEND_URL}
